INCLUDES = -I$(top_srcdir)
check_PROGRAMS = unconstrained constrained containment straightener shortest_paths connected_components
#check_PROGRAMS = shortest_paths
shortest_paths_SOURCES = shortest_paths.cpp
shortest_paths_LDADD = $(top_builddir)/libcola/libcola.a
unconstrained_SOURCES = unconstrained.cpp graphlayouttest.cpp
unconstrained_LDADD = $(top_builddir)/libcola/libcola.a $(top_builddir)/libvpsc/libvpsc.la
constrained_SOURCES = constrained.cpp graphlayouttest.cpp
constrained_LDADD = $(top_builddir)/libcola/libcola.a $(top_builddir)/libvpsc/libvpsc.la
containment_SOURCES = containment.cpp graphlayouttest.cpp
containment_LDADD = $(top_builddir)/libcola/libcola.a $(top_builddir)/libvpsc/libvpsc.la
straightener_SOURCES = straightener.cpp graphlayouttest.cpp
straightener_LDADD = $(top_builddir)/libcola/libcola.a $(top_builddir)/libvpsc/libvpsc.la
connected_components_SOURCES = graphlayouttest.cpp connected_components.cpp
connected_components_LDADD = $(top_builddir)/libcola/libcola.a $(top_builddir)/libvpsc/libvpsc.la
TESTS = $(check_PROGRAMS)
