INCLUDES = -I$(top_srcdir)

LDADD = $(top_builddir)/libavoid/libavoid.la

check_PROGRAMS = \
	example \
	complex \
	multiconnact \
	inline \
	infinity \
	latesetup \
	inlineoverlap01 \
	inlineoverlap02 \
	inlineoverlap03 \
	inlineoverlap04 \
	inlineoverlap05 \
	inlineoverlap06 \
	nudgeintobug \
	activedelete \
	slowrouting \
	corneroverlap01 \
	tjunct \
	vertlineassertion \
	orthordering01 \
	orthordering02 \
	orderassertion \
	connendmove \
	connectionpin01 \
	connectionpin02 \
	junction01 \
	junction02 \
	junction03 \
	junction04

example_SOURCES = example.cpp

multiconnact_SOURCES = multiconnact.cpp

complex_SOURCES = complex.cpp

inline_SOURCES = inline.cpp

infinity_SOURCES = infinity.cpp

latesetup_SOURCES = latesetup.cpp

vertlineassertion_SOURCES = vertlineassertion.cpp

inlineoverlap01_SOURCES = inlineoverlap01.cpp
inlineoverlap02_SOURCES = inlineoverlap02.cpp
inlineoverlap03_SOURCES = inlineoverlap03.cpp
inlineoverlap04_SOURCES = inlineoverlap04.cpp
inlineoverlap05_SOURCES = inlineoverlap05.cpp
inlineoverlap06_SOURCES = inlineoverlap06.cpp

corneroverlap01_SOURCES = corneroverlap01.cpp

orthordering01_SOURCES = orthordering01.cpp
orthordering02_SOURCES = orthordering02.cpp

tjunct_SOURCES = tjunct.cpp

nudgeintobug_SOURCES = nudgeintobug.cpp

activedelete_SOURCES = activedelete.cpp

slowrouting_SOURCES = slowrouting.cpp

orderassertion_SOURCES = orderassertion.cpp

connendmove_SOURCES = connendmove.cpp

connectionpin01_SOURCES = connectionpin01.cpp
connectionpin02_SOURCES = connectionpin02.cpp

junction01_SOURCES = junction01.cpp
junction02_SOURCES = junction02.cpp
junction03_SOURCES = junction03.cpp
junction04_SOURCES = junction04.cpp

TESTS = $(check_PROGRAMS)

