AM_CPPFLAGS = -I$(top_srcdir)

LDADD = $(top_builddir)/libavoid/libavoid.la

# Disabled tests:
#	corneroverlap01
#	unsatisfiableRangeAssertion  - really slow.

check_PROGRAMS = \
	removeJunctions01 \
	penaltyRerouting01 \
	treeRootCrash01 \
	treeRootCrash02 \
        forwardFlowingConnectors01 \
	example \
	endlessLoop01 \
	complex \
	multiconnact \
	inline \
	infinity \
	latesetup \
	inlineoverlap01 \
	inlineoverlap02 \
	inlineoverlap03 \
	inlineoverlap04 \
	inlineoverlap05 \
	inlineoverlap06 \
	inlineoverlap07 \
	inlineoverlap08 \
	inlineOverlap09 \
	inlineOverlap10 \
	inlineOverlap11 \
	nudgeintobug \
	slowrouting \
	tjunct \
	vertlineassertion \
	orthordering01 \
	orthordering02 \
	orderassertion \
	connendmove \
	connectionpin01 \
	connectionpin02 \
	connectionpin03 \
	junction01 \
	junction02 \
	junction03 \
	junction04 \
	nudgeold \
	lineSegWrapperCrash1 \
	lineSegWrapperCrash2 \
	lineSegWrapperCrash3 \
	lineSegWrapperCrash4 \
	lineSegWrapperCrash5 \
	lineSegWrapperCrash6 \
	lineSegWrapperCrash7 \
	lineSegWrapperCrash8 \
	node1 \
	overlappingRects \
	inlineShapes \
	checkpoints01 \
	checkpoints02 \
	checkpoints03 \
	freeFloatingDirection01 \
	restrictedNudging \
	performance01 \
	hyperedge01 \
	hyperedge02 \
	improveHyperedge01 \
	improveHyperedge02 \
	improveHyperedge03 \
	improveHyperedge04 \
	improveHyperedge05 \
	improveHyperedge06 \
	validPaths01 \
	validPaths02 \
	2junctions \
	hyperedgeLoop1 \
	buildOrthogonalChannelInfo1 \
	finalSegmentNudging1 \
	finalSegmentNudging2 \
	finalSegmentNudging3 \
	checkpointNudging1 \
	checkpointNudging2 \
	checkpointNudging3 \
	nudgeCrossing01 \
	nudgingSkipsCheckpoint01 \
	nudgingSkipsCheckpoint02 \
	hola01 \
	hyperedgeRerouting01

# problem_SOURCES = problem.cpp

hola01_SOURCES = hola01.cpp

penaltyRerouting01_SOURCES = penaltyRerouting01.cpp

treeRootCrash01_SOURCES = treeRootCrash01.cpp
treeRootCrash02_SOURCES = treeRootCrash02.cpp

hyperedgeRerouting01_SOURCES = hyperedgeRerouting01.cpp

forwardFlowingConnectors01_SOURCES = forwardFlowingConnectors01.cpp

# unsatisfiableRangeAssertion_SOURCES = unsatisfiableRangeAssertion.cpp

removeJunctions01_SOURCES = removeJunctions01.cpp

endlessLoop01_SOURCES = endlessLoop01.cpp

nudgingSkipsCheckpoint01_SOURCES = nudgingSkipsCheckpoint01.cpp
nudgingSkipsCheckpoint02_SOURCES = nudgingSkipsCheckpoint02.cpp

nudgeCrossing01_SOURCES = nudgeCrossing01.cpp

checkpointNudging1_SOURCES = checkpointNudging1.cpp
checkpointNudging2_SOURCES = checkpointNudging2.cpp
checkpointNudging3_SOURCES = checkpointNudging3.cpp

finalSegmentNudging1_SOURCES = finalSegmentNudging1.cpp
finalSegmentNudging2_SOURCES = finalSegmentNudging2.cpp
finalSegmentNudging3_SOURCES = finalSegmentNudging3.cpp

buildOrthogonalChannelInfo1_SOURCES = buildOrthogonalChannelInfo1.cpp

hyperedgeLoop1_SOURCES = hyperedgeLoop1.cpp

improveHyperedge01_SOURCES = improveHyperedge01.cpp
improveHyperedge02_SOURCES = improveHyperedge02.cpp
improveHyperedge03_SOURCES = improveHyperedge03.cpp
improveHyperedge04_SOURCES = improveHyperedge04.cpp
improveHyperedge05_SOURCES = improveHyperedge05.cpp
improveHyperedge06_SOURCES = improveHyperedge06.cpp

performance01_SOURCES = performance01.cpp

restrictedNudging_SOURCES = restrictedNudging.cpp

freeFloatingDirection01_SOURCES = freeFloatingDirection01.cpp

checkpoints01_SOURCES = checkpoints01.cpp
checkpoints02_SOURCES = checkpoints02.cpp
checkpoints03_SOURCES = checkpoints03.cpp
inlineShapes_SOURCES = inlineShapes.cpp

2junctions_SOURCES = 2junctions.cpp
overlappingRects_SOURCES = overlappingRects.cpp

lineSegWrapperCrash1_SOURCES = lineSegWrapperCrash1.cpp
lineSegWrapperCrash2_SOURCES = lineSegWrapperCrash2.cpp
lineSegWrapperCrash3_SOURCES = lineSegWrapperCrash3.cpp
lineSegWrapperCrash4_SOURCES = lineSegWrapperCrash4.cpp
lineSegWrapperCrash5_SOURCES = lineSegWrapperCrash5.cpp
lineSegWrapperCrash6_SOURCES = lineSegWrapperCrash6.cpp
lineSegWrapperCrash7_SOURCES = lineSegWrapperCrash7.cpp
lineSegWrapperCrash8_SOURCES = lineSegWrapperCrash8.cpp

example_SOURCES = example.cpp
validPaths01_SOURCES = validPaths01.cpp
validPaths02_SOURCES = validPaths02.cpp

multiconnact_SOURCES = multiconnact.cpp

complex_SOURCES = complex.cpp

inline_SOURCES = inline.cpp

infinity_SOURCES = infinity.cpp

latesetup_SOURCES = latesetup.cpp

nudgeold_SOURCES = nudgeold.cpp

node1_SOURCES = node1.cpp

vertlineassertion_SOURCES = vertlineassertion.cpp

inlineoverlap01_SOURCES = inlineoverlap01.cpp
inlineoverlap02_SOURCES = inlineoverlap02.cpp
inlineoverlap03_SOURCES = inlineoverlap03.cpp
inlineoverlap04_SOURCES = inlineoverlap04.cpp
inlineoverlap05_SOURCES = inlineoverlap05.cpp
inlineoverlap06_SOURCES = inlineoverlap06.cpp
inlineoverlap07_SOURCES = inlineoverlap07.cpp
inlineoverlap08_SOURCES = inlineoverlap08.cpp
inlineOverlap09_SOURCES = inlineOverlap09.cpp
inlineOverlap10_SOURCES = inlineOverlap10.cpp
inlineOverlap11_SOURCES = inlineOverlap11.cpp

# corneroverlap01_SOURCES = corneroverlap01.cpp

orthordering01_SOURCES = orthordering01.cpp
orthordering02_SOURCES = orthordering02.cpp

tjunct_SOURCES = tjunct.cpp

hyperedge01_SOURCES = hyperedge01.cpp
hyperedge02_SOURCES = hyperedge02.cpp

nudgeintobug_SOURCES = nudgeintobug.cpp

slowrouting_SOURCES = slowrouting.cpp

orderassertion_SOURCES = orderassertion.cpp

connendmove_SOURCES = connendmove.cpp

connectionpin01_SOURCES = connectionpin01.cpp
connectionpin02_SOURCES = connectionpin02.cpp
connectionpin03_SOURCES = connectionpin03.cpp

junction01_SOURCES = junction01.cpp
junction02_SOURCES = junction02.cpp
junction03_SOURCES = junction03.cpp
junction04_SOURCES = junction04.cpp

TESTS = $(check_PROGRAMS)

