INCLUDES = -I$(top_srcdir) -I/usr/include/cairo -I/usr/include/cairomm-1.0
ldcommon = $(top_builddir)/libtopology/libtopology.a $(top_builddir)/libcola/libcola.a $(top_builddir)/libvpsc/libvpsc.a
check_PROGRAMS = simple_bend triangle split kamada nooverlap
simple_bend_LDADD = $(ldcommon)
simple_bend_SOURCES = simple_bend.cpp 
nooverlap_LDADD = $(ldcommon)
nooverlap_SOURCES = nooverlap.cpp 
triangle_LDADD = $(ldcommon)
triangle_SOURCES = triangle.cpp 
split_LDADD = $(ldcommon)
split_SOURCES = split.cpp 
kamada_LDADD = $(ldcommon)
kamada_SOURCES = kamada.cpp 
TESTS = $(check_PROGRAMS)
